# nullvote-sui

./: .gitignore  CLAUDE.md  INIT_PROMPT.md  LICENSE  README.md  scaffold.sh
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/src/: main.py  merkle.py  registry.py  sui_client.py
backend/src/api/: close.py  commitments.py  register.py  tree.py
backend/src/crypto/: __init__.py  poseidon.py  poseidon_constants.json
backend/tests/: test_merkle.py  test_poseidon.py
circuits/: .gitignore  package-lock.json  package.json
circuits/circuits/: commitment.circom  merkle.circom  vote.circom
circuits/inputs/: sample_input.json  sample_voters.json
circuits/scripts/: compile.sh  export_poseidon_constants.js  gen_sample_input.js  setup.sh  test_vectors.ts
circuits/scripts/export_vk_rs/: Cargo.toml
circuits/scripts/export_vk_rs/src/: main.rs
circuits/tests/: poseidon_test.circom
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DESIGN_SYSTEM.md  PITCH.md  PLAN.md  THREAT_MODEL.md  TIMELINE.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
frontend/public/circuit/: verification_key.json  vote.wasm  vote_final.zkey
frontend/scripts/: verify_groth16_bytes.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/components/: FlipCounter.tsx  LiveTally.tsx  (+2 more)
infra/deploy/: .dockerignore  Caddyfile.snippet  Dockerfile.backend  README.md  deploy.sh  docker-compose.yml
move/: .gitignore  Move.toml  deployments.json
move/scripts/: deploy.sh  e2e_test.sh
move/sources/: election.move  events.move  vk.move
move/tests/: election_tests.move
(+15 files in other folders)
