[project]
name = "nullvote-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "greenlet>=3.0",
  "pysui>=0.60",
  "python-dotenv>=1.0"
]
# Poseidon: no pip package matches circomlib BN254 params, so we ship a
# pure-Python port in src/crypto/poseidon.py with constants extracted from
# circomlibjs. Regenerate via `node circuits/scripts/export_poseidon_constants.js`.

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "black", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
